--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="menu.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu Des Roulants</title>
-    <link rel="stylesheet" href="menu.css"
 </head>
-<body style="background-image: url(https://pbs.twimg.com/media/CoYFw_UXEAAFOe2.jpg);">
+<body style="background: linear-gradient(90deg, #83c7b3, #0086bb , #0661a9, #3a3287);">
     <div class="navbar">
         <a href="#home">Home</a>
         <a href="#news">News</a>
@@ -27,20 +27,29 @@
                             <a href="#">Saucisse-Pistache</a>
                     </div>
                     <div class="column">
-                        <h3>Category 2</h3>
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
+                        <h3>Sauces</h3>
+                        <a href="#">Mayonnaise</a>
+                        <a href="#">Ketchup</a>
+                        <a href="#">Moutarde/a>
                     </div>
                     <div class="column">
-                        <h3>Category 3</h3>
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
+                        <h3>Pain</h3>
+                        <a href="#">Complet</a>
+                        <a href="#">Sans Gluten</a>
+                        <a href="#"> Normal</a>
                     </div>
                 </div>
             </div>
         </div>
     </div> 
+    <div class="image_drop">
+        <img src="../../ressources/LOGO_SNCF_GROUPE_DEFONCE.png" width="50%">
+    </div>
+    <p style="text-align: center; color: white; font-family: 'Oswald'; font-size: 3vw; padding-bottom: 100px;">
+        BY
+    </p>
+    <div class="image_drop">
+        <img src="../../ressources/LOGO_BLANC.png" width="50%">
+    </div>
 </body>
 </html>
