Update piscine discovery

--- a/cell01/ex04/baba.html
+++ b/cell01/ex04/baba.html
@@ -11,7 +11,7 @@
           text-align:center;
         }
       </style>
-    <h1 style="color: white;">L'éthique du codeur (fallait un accent donc bon... voilà)</h1>
+    <h1 style="color: white; text-align: center;">L'éthique du codeur (fallait un accent donc bon... voilà)</h1>
 </head>
 <body style="background-color: PINK;">
         <div class="container">
@@ -21,6 +21,10 @@
         <div class="container">
             <img src="https://miro.medium.com/max/1400/1*zsl4DFqxy_p1m5ZVCsvbyA.png" width="200px" height="200px"/>
             <p><a href="https://www.veepee.fr/gr/portalwidth">VEEPEE</a></p>
+        </div>
+        <hr noshade width="100%" size="3">
+        <div style="text-align: right; font-style: italic; font-family: 'Courier New, Courier, monospace';">
+          © barodrig 2020
         </div>
 </body>
 </html>
