--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -5,10 +5,13 @@
     <style>
         div.container {
           display: flex;
+          flex-direction: row;
+          justify-content: center;
         }
 
         .flex {
-          flex:1;
+          width: 200px;
+          height: 200px;
         }
 
         p {
