--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -3,27 +3,42 @@
 <head style="background-color: white;">
     <title>RESPONSIBE</title>
     <style>
-        div.container {
-          display: flex;
-        }
+      body{
+        margin: auto;
+      }
 
-        .flex {
-          flex:1;
-        }
+      table{
+          margin: auto;
+          border-collapse: collapse;
+          height: 100vh;
+          width: 100%;
+      }
 
-        p {
-          text-align:center;
-        }
-      </style>
+      .tab1 {
+        text-align: left;
+        width: 50vh;
+        height: 100%;
+        margin: auto;
+        background-color:brown;
+      }
+
+      .tab2 {
+        text-align: left;
+        width: 50vh;
+        height: 100%;
+        margin: auto;
+        background-color:green;
+      }
+    </style>
 </head>
-<body style="background-image: url(https://j.gifs.com/Q1xW4q@large.gif?download=true)">
-      <div class="container">
-        <div class="flex" style="background-color:brown">
-            <p>NEVER GONNA GIVE YOU UP</p>
-        </div>
-        <div class="flex" style="background-color:green">
-            <p>NEVER GONNA LET YOU DOWN</p>
-        </div>
-      </div>
+<body>
+      <table>
+        <th class="tab1">
+            NEVER GONNA GIVE YOU UP
+        </th>
+        <th class="tab2">
+            NEVER GONNA LET YOU DOWN
+        </th>
+      </table>
 </body>
 </html>
