--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -4,14 +4,14 @@
   <link rel="stylesheet" href="responsive.css">
     <title>RESPONSIVE CSS</title>
 </head>
-<body style="background-image: url(https://j.gifs.com/Q1xW4q@large.gif?download=true)">
-      <div class="container">
-        <div class="flex" style="background-color:brown">
-            <p>NEVER GONNA GIVE YOU UP</p>
-        </div>
-        <div class="flex" style="background-color:green">
-            <p>NEVER GONNA LET YOU DOWN</p>
-        </div>
-      </div>
+<body>
+  <table>
+    <th class="tab1">
+        NEVER GONNA GIVE YOU UP
+    </th>
+    <th class="tab2">
+        NEVER GONNA LET YOU DOWN
+    </th>
+  </table>
 </body>
 </html>
