--- a/cell03/ex03/index.html
+++ b/cell03/ex03/index.html
@@ -26,18 +26,48 @@
             min-height: 400px;
             position: relative;
         }
+        .task{
+            border-radius: 5px;
+            align-items: center;
+            justify-content: space-between;
+            border: 1px solid #939697;
+            cursor: pointer;
+            background-color: #c5e1e6;
+            height: 50px;
+            margin-bottom: 8px;
+            padding: 5px 10px;
+            display: flex;
+        }
+
+        .task span{
+            font-family: 'Poppins',sans-serif;
+            font-size: 15px;
+            font-weight: 400;
+        }
+
+        .task button{
+            background-color: #0a2ea4;
+            color: #ffffff;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            height: 100%;
+            width: 40px;
+            border-radius: 5px;
+        }
 
         .newbtn {
             text-align: center;
         }
     </style>
+    <script src="todo.js"></script>
 </head>
 <body>
+    <h1>To Do List</h1>
     <div class="ft_list" id="ft_list">
-        Here
     </div>
     <div style="margin-top: 10px;">
-        <button class="new_btn" id="new">New</button>
+        <button class="new_btn" id="new" onclick="NewToDo()">New</button>
     </div>
 </body>
 </html>
