--- a/cell03/ex00/background.html
+++ b/cell03/ex00/background.html
@@ -9,6 +9,6 @@
     <title>Click me !</title>
 </head>
 <body>
-    <button class="bottom_button" onclick="changeColor()">Click me !</button>
+    <button class="bottom_button" id="the-button" onclick="changeColor()">Click me !</button>
 </body>
 </html>
