Succeeded at cell03/ex03

--- a/cell03/ex03/index.html
+++ b/cell03/ex03/index.html
@@ -17,13 +17,11 @@
         }
 
         .ft_list {
-            width: 40%;
-            height: 50%;
             background: whitesmoke;
             border-radius: 10px;
             border: solid 5px #3a3287;
-            min-width: 450px;
-            min-height: 400px;
+            min-width: 30vw;
+            min-height: 30vh;
             position: relative;
         }
         .task{
@@ -66,7 +64,7 @@
     <h1>To Do List</h1>
     <div class="ft_list" id="ft_list">
     </div>
-    <div style="margin-top: 10px;">
+    <div style="margin-top: 20px;">
         <button class="new_btn" id="new" onclick="NewToDo()">New</button>
     </div>
 </body>
